--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<p>
+    hello-sri works! {{title}}
+</p>
+<hello-sri name="Sri"></hello-sri>
+<router-outlet></router-outlet>
